hphp/test/slow/hhbbc/bad-default-argument.php.expectf
Fatal error: Class undefined: C in %s/bad-default-argument.php on line 3
